--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img
-            src="assets/img/Sony_Alpha_logo.svg"
+            src="assets/img/alpha-transparent.png"
             alt="Sony Alpha"
             height="30"
           />
