Update file tree
Added pictures of the cameras mentioned in cameras.html

--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img
-            src="assets/img/alpha-transparent.png"
-            alt="Sony Alpha"
-            height="30"
-          />
+          <img src="assets/img/alpha-logo.svg" alt="α" height="30" class="ms-2"/>
+          <span class="visually-hidden">Sony α</span>
         </a>
         <button
           class="navbar-toggler"
@@ -59,13 +56,13 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-lg-10">
-            <h1 class="hero-title fade-in">Serie Sony α</h1>
+            <h1 class="hero-title fade-in">Serie Sony <span class="alpha-accent">α</span></h1>
             <p class="hero-subtitle fade-in-delay-1">
               Donde la innovación se encuentra con la excelencia en imagen
             </p>
             <p class="hero-text fade-in-delay-2">
               Desde la revolucionaria α100 en 2006 hasta las cámaras mirrorless
-              de vanguardia de hoy, Sony Alpha ha redefinido lo que es posible
+              de vanguardia de hoy, Sony <span class="alpha-accent">α</span> ha redefinido lo que es posible
               en la fotografía digital.
             </p>
           </div>
@@ -101,17 +98,22 @@
           <div class="col-lg-10">
             <div class="card info-card border-0 shadow">
               <div class="card-body p-4 p-md-5">
-                <h2 class="card-title mb-4">El Legado Alpha</h2>
+                <h2 class="card-title mb-4">El Legado <span class="alpha-accent">α</span></h2>
                 <p class="card-text">
-                  La <strong>Sony α100</strong> (2006) marcó la entrada de Sony
-                  al mercado DSLR después de adquirir la división de cámaras de
-                  Konica Minolta. Con un sensor CCD de 10.2MP y el innovador
-                  sistema de estabilización de imagen Super SteadyShot integrado
-                  en el cuerpo, sentó las bases de lo que se convertiría en uno
-                  de los sistemas de cámaras más respetados del mundo.
+                  La <strong>Sony α100</strong> (DSLR-A100), lanzada a fines de julio de 2006, fue la
+                  primera cámara réflex digital comercializada por Sony. Sucesora de los modelos 
+                  DSLR de Konica Minolta, incorporaba un sensor CCD APS-C de 10.2MP y el innovador
+                  sistema de estabilización de imagen <strong>Super SteadyShot</strong> integrado
+                  en el cuerpo de la cámara.
+                </p>
+                <p class="card-text">
+                  Características revolucionarias incluyeron <strong>Eyestart</strong>, que activa automáticamente
+                  el enfoque al detectar el ojo del fotógrafo, y vibración automática del CCD para eliminación
+                  de polvo. La α100 conservó la montura AF compatible con millones de objetivos Minolta desde 1985,
+                  sentando las bases de lo que se convertiría en uno de los sistemas de cámaras más respetados del mundo.
                 </p>
                 <p class="card-text mb-0">
-                  Hoy, la serie Alpha abarca tanto
+                  Hoy, la serie <span class="alpha-accent">α</span> abarca tanto
                   <strong>DSLRs con montura A</strong> como las revolucionarias
                   <strong>cámaras mirrorless con montura E</strong>, incluyendo
                   las aclamadas series α7, α9 y α1 que han transformado la
@@ -128,7 +130,7 @@
     <footer class="footer py-4 bg-dark text-white-50">
       <div class="container text-center">
         <p class="mb-0">
-          &copy; 2024 Entusiastas Sony Alpha. Todos los derechos reservados.
+          &copy; 2024 Entusiastas Sony <span class="alpha-accent">α</span>. Todos los derechos reservados.
         </p>
       </div>
     </footer>
