--- a/lenses.html
+++ b/lenses.html
@@ -24,11 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img
-            src="assets/img/alpha-transparent.png"
-            alt="Sony Alpha"
-            height="30"
-          />
+          <img src="assets/img/alpha-logo.svg" alt="α" height="30" class="ms-2"/>
+          <span class="visually-hidden">Sony <span class="alpha-accent">α</span></span>
         </a>
         <button
           class="navbar-toggler"
@@ -236,7 +233,7 @@
     <footer class="footer py-4 bg-dark text-white-50">
       <div class="container text-center">
         <p class="mb-0">
-          &copy; 2024 Entusiastas Sony Alpha. Todos los derechos reservados.
+          &copy; 2024 Entusiastas Sony <span class="alpha-accent">α</span>. Todos los derechos reservados.
         </p>
       </div>
     </footer>
