--- a/cameras.html
+++ b/cameras.html
@@ -24,11 +24,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img
-          src="assets/img/alpha-transparent.png"
-            alt="Sony Alpha"
-            height="30"
-          />
+          <img src="assets/img/alpha-logo.svg" alt="α" height="30" class="ms-2"/>
+          <span class="visually-hidden">Sony<span class="alpha-accent">α</span></span>
         </a>
         <button
           class="navbar-toggler"
@@ -59,13 +56,13 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-lg-10">
-            <h1 class="hero-title fade-in">Cámaras Alpha</h1>
+            <h1 class="hero-title fade-in">Cámaras <span class="alpha-accent">α</span></h1>
             <p class="hero-subtitle fade-in-delay-1">
               Encuentra tu compañera de imagen perfecta
             </p>
             <p class="hero-text fade-in-delay-2">
               Desde la revolucionaria α100 hasta la insignia α1 de hoy, explora
-              la línea completa Sony Alpha.
+              la línea completa Sony <span class="alpha-accent">α</span>.
             </p>
           </div>
         </div>
@@ -83,6 +80,9 @@
           <div class="row g-4">
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a1.webp" alt="α1" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α1</h5>
                   <p class="card-text text-muted">
@@ -98,6 +98,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a9iii.webp" alt="α9 III" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α9 III</h5>
                   <p class="card-text text-muted">
@@ -120,6 +123,9 @@
           <div class="row g-4">
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a7rv.webp" alt="α7R V" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α7R V</h5>
                   <p class="card-text text-muted">
@@ -134,6 +140,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a7iv.webp" alt="α7 IV" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α7 IV</h5>
                   <p class="card-text text-muted">
@@ -148,6 +157,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a7cii.webp" alt="α7C II" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α7C II</h5>
                   <p class="card-text text-muted">
@@ -169,6 +181,9 @@
           <div class="row g-4">
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a6700.webp" alt="α6700" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α6700</h5>
                   <p class="card-text text-muted">
@@ -183,6 +198,9 @@
             </div>
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a6400.webp" alt="α6400" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α6400</h5>
                   <p class="card-text text-muted">
@@ -204,6 +222,9 @@
           <div class="row g-4">
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
+                <div class="card-img-container">
+                  <img src="assets/img/cameras/a100.webp" alt="α100 (2006)" class="card-img-top" loading="lazy" />
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">α100 (2006)</h5>
                   <p class="card-text text-muted">
@@ -225,7 +246,7 @@
     <footer class="footer py-4 bg-dark text-white-50">
       <div class="container text-center">
         <p class="mb-0">
-          &copy; 2024 Entusiastas Sony Alpha. Todos los derechos reservados.
+          &copy; 2024 Entusiastas Sony <span class="alpha-accent">α</span>. Todos los derechos reservados.
         </p>
       </div>
     </footer>
