--- a/cameras.html
+++ b/cameras.html
@@ -81,7 +81,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a1.webp" alt="α1" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a1II.jpg" alt="α1" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α1</h5>
@@ -99,7 +99,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a9iii.webp" alt="α9 III" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a9III.jpg" alt="α9 III" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α9 III</h5>
@@ -124,7 +124,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a7rv.webp" alt="α7R V" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a7RV.jpg" alt="α7R V" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α7R V</h5>
@@ -141,7 +141,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a7iv.webp" alt="α7 IV" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/A7IV.jpg" alt="α7 IV" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α7 IV</h5>
@@ -158,7 +158,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a7cii.webp" alt="α7C II" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a7CII.jpg" alt="α7C II" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α7C II</h5>
@@ -182,7 +182,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a6700.webp" alt="α6700" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/A6700.jpg" alt="α6700" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α6700</h5>
@@ -199,7 +199,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a6400.webp" alt="α6400" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a6400.jpg" alt="α6400" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α6400</h5>
@@ -223,7 +223,7 @@
             <div class="col-md-6 col-lg-4">
               <div class="card camera-card h-100 border-0 shadow">
                 <div class="card-img-container">
-                  <img src="assets/img/cameras/a100.webp" alt="α100 (2006)" class="card-img-top" loading="lazy" />
+                  <img src="assets/img/cameras/a100.jpg" alt="α100 (2006)" class="card-img-top" loading="lazy" />
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">α100 (2006)</h5>
