--- a/cameras.html
+++ b/cameras.html
@@ -246,7 +246,7 @@
     <footer class="footer py-4 bg-dark text-white-50">
       <div class="container text-center">
         <p class="mb-0">
-          &copy; 2024 Entusiastas Sony <span class="alpha-accent">α</span>. Todos los derechos reservados.
+          &copy; 2025 - Hecho con Inteligencia Artesanal. Auspiciado por SENCE y el programa TalentoDigital
         </p>
       </div>
     </footer>
